Add application version to website

--- a/roles/install/templates/index.j2
+++ b/roles/install/templates/index.j2
@@ -43,6 +43,7 @@ body {
 </style>
 <body>
     <div style="text-align: center; color: white;"><h1>{{message}}</h1><br>Proudly served by NGINX!
+    <br>Application Version 2
     <br><br><img src="https://raw.githubusercontent.com/cloudify-examples/local-simple-python-webserver-blueprint/master/Cloudify-Logo-White.png" width="300px"></div>
 </body>
 </html>
